Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.3.0 RC1
-
None
-
qtdeclarative#stable: 009ad875f89d7d7bc4447e18c2fbbd485a75e0b5
Description
This change introduced a bug which affects components with by default enabled antialiasing (Canvas, Text, Rectangle with radius > 0). If antialiasing property of a such component is also set to true, then the actual returned value is false. For rectangle behaviour depends on order of antialiasing and radius properties in the component definition.
Attachments
Issue Links
- replaces
-
QTBUG-39323 Anti-aliasing not working anymore in Canvas
-
- Closed
-
For Gerrit Dashboard: QTBUG-39047 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
85632,4 | Fix improper antialiasing property behavior | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |